--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -15,10 +15,11 @@
 
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="96dp"
-        android:text="Mis cuentas"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="68dp"
+        android:text="@string/miscuentas"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -31,8 +32,9 @@
         android:layout_height="100dp"
         android:layout_marginStart="192dp"
         android:layout_marginLeft="192dp"
-        android:layout_marginTop="96dp"
-        android:text="Oportunidades"
+        android:layout_marginTop="68dp"
+        android:text="@string/op"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -42,10 +44,11 @@
         style="@style/SmsButton"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="236dp"
-        android:text="Transferir"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="228dp"
+        android:text="@string/tr"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -57,8 +60,9 @@
         android:layout_height="100dp"
         android:layout_marginStart="192dp"
         android:layout_marginLeft="192dp"
-        android:layout_marginTop="236dp"
-        android:text="Retiro sin tarjeta"
+        android:layout_marginTop="228dp"
+        android:text="@string/retiro"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -68,10 +72,11 @@
         style="@style/SmsButton"
         android:layout_width="150dp"
         android:layout_height="100dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="368dp"
-        android:text="Pagar"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="376dp"
+        android:text="@string/pagar"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -83,8 +88,9 @@
         android:layout_height="100dp"
         android:layout_marginStart="192dp"
         android:layout_marginLeft="192dp"
-        android:layout_marginTop="368dp"
-        android:text="Comparar/Contratar"
+        android:layout_marginTop="376dp"
+        android:text="@string/comprar"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -94,10 +100,11 @@
         style="@style/SmsButton"
         android:layout_width="328dp"
         android:layout_height="98dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="508dp"
-        android:text="Consultar"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="520dp"
+        android:text="@string/consultar"
+        android:textAllCaps="false"
         android:textColor="#FFFFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
