--- a/app/src/main/res/layout/face_recognition.xml
+++ b/app/src/main/res/layout/face_recognition.xml
@@ -8,10 +8,10 @@
 
 
     <ImageView
+        android:id="@+id/imageview"
         android:layout_marginTop="40dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:src="@mipmap/front"
         android:layout_weight="40"/>
 
     <TextView
