--- a/app/src/main/res/layout/welcome.xml
+++ b/app/src/main/res/layout/welcome.xml
@@ -7,5 +7,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/bbva_logo"
-        android:scaleType = "centerInside"/>
+        android:scaleType = "fitXY"/>
 </LinearLayout>
